--- a/estilos/style.css
+++ b/estilos/style.css
@@ -43,3 +43,18 @@ iframe#tela{
     width: 270px;
     height: 471px;
 }
+
+section#redes-sociais img{
+
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.068);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px black;
+    transition: 1s ;
+}
