--- a/estilos/style.css
+++ b/estilos/style.css
@@ -40,7 +40,7 @@ iframe#tela{
     position: relative;
     top: 80px;
     left: 22px;
-    width: 270px;
+    width: 267px;
     height: 471px;
 }
 
@@ -56,5 +56,5 @@ section#redes-sociais img:hover{
     border: 2px solid rgba(255, 255, 255, 0.068);
     transform: translate(-3px, -3px);
     box-shadow: 5px 5px 10px black;
-    transition: 1s ;
+    transition:  transform .3s, border 1s ;
 }
